[package]
name = "cocoblu_solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cocoblu_upstream = { path = "../cocoblu_upstream" }
cocoblu_upstream = { git = "https://github.com/AnotherDaniel/cocoblu_upstream" } # , rev = "abcdef0123456789"
